[package]
name = "noucra"
version = "0.1.0"
authors = ["Mrinal Paliwal <mrinalpaliwal98@gmail.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/bin/main.rs"
name = "noucra"

[dependencies]
actix-web = "4"
tokio = {version = "1", features = ["macros", "rt-multi-thread", "test-util"]}
serde = {version = "1", features = ["derive"]}
config = "0.11"
uuid = {version = "0.8.1", features = ["v4"]}
chrono = "0.4.15"
log = "0.4"
env_logger = "0.9"

[dependencies.sqlx]
version = "0.5.7"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
]

[dev-dependencies]
reqwest = "0.11"